--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -185,17 +185,14 @@ jobs:
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
     steps:
       - uses: actions/checkout@v4
-
       - uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ env.SSH_PRIVATE_KEY }}
-
       - name: Copier scripts et configs sur admin
         run: |
           scp -o StrictHostKeyChecking=no cluster_config.yml $ADMIN_USER@$ADMIN_IP:~/
           scp -o StrictHostKeyChecking=no docker-compose.yml $ADMIN_USER@$ADMIN_IP:~/
           scp -o StrictHostKeyChecking=no scripts/deploy_cluster.sh $ADMIN_USER@$ADMIN_IP:~/
-
       - name: Installer yq sur admin
         run: |
           ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP "\
@@ -205,75 +202,59 @@ jobs:
               sudo mv yq /usr/local/bin/yq; \
             fi \
           "
-
       - name: Lancer le script de déploiement
         run: |
           ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP "chmod +x ~/deploy_cluster.sh && ~/deploy_cluster.sh"
 
-      # === AJOUT UNIQUEMENT CETTE ÉTAPE ===
+      # ---------- SEULE PARTIE AJOUTÉE / MODIFIÉE ----------
       - name: Post-déploiement – désactiver read-only (nginx & frontend) avec attente
         run: |
-          ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP '
-            set -e
-            MASTER_IP=$(yq e ".nodes.master.ip" ~/cluster_config.yml)
-            MASTER_USER=$(yq e ".nodes.master.user" ~/cluster_config.yml)
-            ssh -i ~/.ssh/id_ed25519_github -o StrictHostKeyChecking=no "$MASTER_USER@$MASTER_IP" bash -s << "EOF"
-            set -e
-            wait_ready() {
-              svc="$1"
-              echo "⏳ Attente que $svc soit prêt..."
-              for i in {1..60}; do
-                RUN=$(sudo docker service ps "$svc" --format "{{.CurrentState}}" | grep -c Running || true)
-                TOT=$(sudo docker service ps "$svc" --format "{{.CurrentState}}" | wc -l | tr -d " " || true)
-                if [ "$TOT" -gt 0 ] && [ "$RUN" -eq "$TOT" ]; then
-                  echo "✔ $svc prêt ($RUN/$TOT Running)"
-                  return 0
-                fi
-                sleep 2
-              done
-              echo "⚠ Timeout d'attente pour $svc, tentative d'update quand même."
-              return 0
-            }
-            for s in littlepigs_nginx littlepigs_frontend; do
-              wait_ready "$s"
-            done
-            try_update() {
-              svc="$1"
-              for a in 1 2 3; do
-                if sudo docker service update --read-only=false --force "$svc"; then
-                  echo "✔ Update OK sur $svc"
-                  return 0
-                fi
-                echo "retry $a/3 dans 3s (update out of sequence ?)"
-                sleep 3
-              done
-              exit 1
-            }
-            try_update littlepigs_nginx
-            try_update littlepigs_frontend
-            EOF
-          '
+          ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP <<'ADMIN'
+          set -e
+          MASTER_IP=$(yq e '.nodes.master.ip' ~/cluster_config.yml)
+          MASTER_USER=$(yq e '.nodes.master.user' ~/cluster_config.yml)
 
-  cluster_healthcheck:
-    runs-on: self-hosted
-    needs: deploy_cluster
-    env:
-      ADMIN_USER: ${{ secrets.ADMIN_USER }}
-      ADMIN_IP: ${{ secrets.ADMIN_IP }}
-      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: webfactory/ssh-agent@v0.5.4
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Copier healthcheck.sh et cluster_config.yml sur admin
-        run: |
-          scp -o StrictHostKeyChecking=no scripts/healthcheck.sh $ADMIN_USER@$ADMIN_IP:~/
-          scp -o StrictHostKeyChecking=no cluster_config.yml $ADMIN_USER@$ADMIN_IP:~/
-      - name: Exécuter healthcheck (logs + vérifications)
-        run: |
-          ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP "chmod +x ~/healthcheck.sh && ~/healthcheck.sh"
-      - name: Récupérer et afficher le log du healthcheck
-        run: |
-          scp -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP:~/cluster_health.log ./cluster_health.log
-          cat ./cluster_health.log
+          ssh -i ~/.ssh/id_ed25519_github -o StrictHostKeyChecking=no "$MASTER_USER@$MASTER_IP" 'bash -s' <<'MASTER'
+          set -e
+
+          wait_ready () {
+            local svc="$1"
+            local end=$((SECONDS+180))
+            echo "⏳ Attente que $svc soit prêt (<=180s)..."
+            while [ $SECONDS -lt $end ]; do
+              if sudo docker service ps "$svc" --filter desired-state=running --format '{{.CurrentState}}' | grep -q '^Running '; then
+                echo "✅ $svc a au moins 1 task Running."
+                return 0
+              fi
+              sleep 3
+            done
+            echo "⚠️  Timeout en attendant $svc (on continue quand même)."
+            return 1
+          }
+
+          try_update () {
+            local svc="$1"
+            for i in 1 2 3 4 5; do
+              if sudo docker service update --read-only=false --force "$svc"; then
+                echo "✅ read-only désactivé pour $svc"
+                return 0
+              fi
+              echo "⚠️  update out of sequence pour $svc, retry $i..."
+              sleep 2
+            done
+            echo "❌ Impossible de mettre à jour $svc après retries"
+            exit 1
+          }
+
+          wait_ready littlepigs_nginx || true
+          wait_ready littlepigs_frontend || true
+
+          try_update littlepigs_nginx
+          try_update littlepigs_frontend
+
+          echo "--- État des tasks ---"
+          sudo docker service ps littlepigs_nginx --no-trunc
+          sudo docker service ps littlepigs_frontend --no-trunc
+          MASTER
+          ADMIN
+  # ---------- FIN MODIF ----------
