--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,12 @@
 FROM nginx:alpine
 
-# Ajout user non-root pour servir les fichiers
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
-
 WORKDIR /usr/share/nginx/html
 COPY . .
 
-USER appuser
+RUN mkdir -p /var/cache/nginx/client_temp /var/cache/nginx/proxy_temp \
+    /var/cache/nginx/fastcgi_temp /var/cache/nginx/uwsgi_temp /var/cache/nginx/scgi_temp \
+    /var/run/nginx /var/log/nginx \
+ && chown -R nginx:nginx /var/cache/nginx /var/run/nginx /var/log/nginx /etc/nginx /usr/share/nginx/html
 
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
