--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -228,4 +228,4 @@ jobs:
       - name: Récupérer et afficher le log du healthcheck
         run: |
           scp -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP:~/cluster_health.log ./cluster_health.log
-          cat ./cluster_health.log
+          # cat ./cluster_health.log
