--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,14 +14,14 @@ permissions:
   security-events: write
 
 jobs:
-  mise_a_jour_backend:
+  Mise_a_jour_backend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
       - run: docker build -t local-backend:latest ./backend
 
-  controle_qualite:
+  Controle_qualite:
     runs-on: ubuntu-latest
     needs: mise_a_jour_backend
     if: github.event_name != 'schedule'
@@ -126,7 +126,7 @@ jobs:
       - name: Scan Trivy du code (SCA + vuln + secrets)
         run: trivy fs --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format table --scanners vuln,secret,config .
 
-  construction_et_deploiement:
+  Construction_et_Scans:
     runs-on: ubuntu-latest
     needs: controle_qualite
     if: github.event_name != 'schedule'
@@ -176,7 +176,7 @@ jobs:
           sarif_file: "trivy-nginx.sarif"
           category: "trivy-nginx"
 
-  deploy_cluster:
+  Deploiement_du_cluster:
     runs-on: self-hosted
     needs: construction_et_deploiement
     env:
@@ -206,7 +206,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP "chmod +x ~/deploy_cluster.sh && ~/deploy_cluster.sh"
 
-  cluster_healthcheck:
+  Etat_de_sante_du_cluster:
     runs-on: self-hosted
     needs: deploy_cluster
     env:
@@ -228,4 +228,4 @@ jobs:
       - name: Récupérer et afficher le log du healthcheck
         run: |
           scp -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP:~/cluster_health.log ./cluster_health.log
-          # cat ./cluster_health.log
+          cat ./cluster_health.log
