--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,14 +14,14 @@ permissions:
   security-events: write
 
 jobs:
-  Mise_a_jour_backend:
+  mise_a_jour_backend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
       - run: docker build -t local-backend:latest ./backend
 
-  Controle_qualite:
+  controle_qualite:
     runs-on: ubuntu-latest
     needs: mise_a_jour_backend
     if: github.event_name != 'schedule'
@@ -126,7 +126,7 @@ jobs:
       - name: Scan Trivy du code (SCA + vuln + secrets)
         run: trivy fs --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format table --scanners vuln,secret,config .
 
-  Construction_et_Scans:
+  construction_et_scans:
     runs-on: ubuntu-latest
     needs: controle_qualite
     if: github.event_name != 'schedule'
@@ -176,9 +176,9 @@ jobs:
           sarif_file: "trivy-nginx.sarif"
           category: "trivy-nginx"
 
-  Deploiement_du_cluster:
+  deploiement_du_cluster:
     runs-on: self-hosted
-    needs: construction_et_deploiement
+    needs: construction_et_scans
     env:
       ADMIN_USER: ${{ secrets.ADMIN_USER }}
       ADMIN_IP: ${{ secrets.ADMIN_IP }}
@@ -206,9 +206,9 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no $ADMIN_USER@$ADMIN_IP "chmod +x ~/deploy_cluster.sh && ~/deploy_cluster.sh"
 
-  Etat_de_sante_du_cluster:
+  etat_de_sante_du_cluster:
     runs-on: self-hosted
-    needs: deploy_cluster
+    needs: deploiement_du_cluster
     env:
       ADMIN_USER: ${{ secrets.ADMIN_USER }}
       ADMIN_IP: ${{ secrets.ADMIN_IP }}
@@ -217,7 +217,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: webfactory/ssh-agent@v0.5.4
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ env.SSH_PRIVATE_KEY }}
       - name: Copier healthcheck.sh et cluster_config.yml sur admin
         run: |
           scp -o StrictHostKeyChecking=no scripts/healthcheck.sh $ADMIN_USER@$ADMIN_IP:~/
