--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -103,7 +103,7 @@ jobs:
 
       - name: Tests passés avec succès 
         if: success()
-        run: echo "✅ Tous les tests Pytest sont passés avec succès !"
+        run: echo "Tous les tests Pytest sont passés avec succès !"
 
       - name: Analyse Bandit (Python)
         uses: tj-actions/bandit@v5
@@ -217,7 +217,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: webfactory/ssh-agent@v0.5.4
         with:
-          ssh-private-key: ${{ env.SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Copier healthcheck.sh et cluster_config.yml sur admin
         run: |
           scp -o StrictHostKeyChecking=no scripts/healthcheck.sh $ADMIN_USER@$ADMIN_IP:~/
